src/client/index.css
/* ... */
.ant-btn:focus,
.ant-btn:hover {
  border-color: #00ad50;
}

.ant-tabs-nav .ant-tabs-tab-active,
.ant-tabs-nav .ant-tabs-tab:hover {
  color: #00ad50;
}

.ant-tabs-ink-bar {
  background-color: #00ad50;
}

.ant-table-thead > tr > th .ant-table-column-sorter .ant-table-column-sorter-inner .ant-table-column-sorter-down.on,
.ant-table-thead > tr > th .ant-table-column-sorter .ant-table-column-sorter-inner .ant-table-column-sorter-up.on {
  color: #00ad50;
}

.ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
  color: #00ad50;
}

.ant-select-focused .ant-select-selection,
.ant-select-selection:active,
.ant-select-selection:focus {
  box-shadow: 0 0 1px 1px #5eb50066;
}

.ant-modal-wrap.test-preview-modal {
  overflow: unset;
  width: 100%;
  height: 100vh;
}

.ant-message-info .anticon {
  color: #f9942d;
}

.sortableHelper {
  z-index: 10000;
}

.ant-modal .ant-switch-checked {
  background-color: #00ad50;
}

.ant-affix {
  z-index: 50;
}

/* Passage type  */
.selected-text-heighlight {
  position: relative;
  cursor: pointer;
  z-index: 900;
}

.selected-text-heighlight.unsaved {
  background: #1890ff40;
}

.customTooltip div.ant-tooltip-inner {
  width: max-content;
}

.ant-modal-wrap {
  overflow-y: auto;
}

.ant-modal-centered .ant-modal {
  margin: 20px auto;
}

iframe {
  width: 100%;
  overflow: auto;
}

