fix(previewModal): now showing scrollbar (#5868)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2114,3 +2114,6 @@ iframe {
   width: 100%;
   overflow: auto;
 }
+.noOverFlowModal {
+  overflow: hidden;
+}
